Adjustments on GA

--- a/talks/gde-educacaosp/index.html
+++ b/talks/gde-educacaosp/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="css/reveal.min.css">
 		<link rel="stylesheet" href="css/theme/gde.css" id="theme">
 
-		<link rel="stylesheet" href="css/print/pdf.css">
+		<!-- <link rel="stylesheet" href="css/print/pdf.css"> -->
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
