--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ language: en
 
 <p>HTML5, CSS3, JavaScript, usability, UX, wireframes, soccer, cold tea and a lot of water are part of my day. In my free time, I like to read (technical and biography books) and go out to dinner.</p>
 
-<p>If you wanna talk about the web, a new cool project or about my soccer team, send me an <a href="mailto:contato@raphaelfabeni.com.br">e-mail</a>. If you like, I also write about web stuff in my <a id="blog" href="{{ site.baseurl }}blog" data-link="Blog">Blog</a> but for now, it is in portuguese.</p>
+<p>If you wanna talk about the web, a new cool project or about my soccer team, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. If you like, I also write about web stuff in my <a id="blog" href="{{ site.baseurl }}blog" data-link="Blog">Blog</a> but for now, it is in portuguese.</p>
 
 <ul class="social">
     <li>
