Add flags project to page

--- a/projects/index.html
+++ b/projects/index.html
@@ -10,6 +10,7 @@ language: en
     <div data-repo="raphaelfabeni/css-comments" class="github-box-wrap"></div>
     <div data-repo="raphaelfabeni/css-sp" class="github-box-wrap"></div>
     <div data-repo="raphaelfabeni/snippets-wp" class="github-box-wrap"></div>
+    <div data-repo="raphaelfabeni/flags-css3" class="github-box-wrap"></div>
     <div data-repo="raphaelfabeni/pikachu-css3" class="github-box-wrap"></div>
     <div data-repo="raphaelfabeni/compass-css3" class="github-box-wrap"></div>
     <div data-repo="raphaelfabeni/transition-snippets" class="github-box-wrap"></div>
