--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ language: en
 
 <p>HTML5, CSS3, JavaScript, UX, wireframes, soccer, cold tea and a lot of water are part of my day. In my free time, I like to read (technical and biography books), play some soccer and go out to dinner.</p>
 
-<p>If you wanna talk about the web, a new cool project or invite me to play soocer, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. If you like, I also write about web stuff in my blog (<a id="blog-pt" href="{{ site.baseurl }}blog" data-link="Blog PT-BR">PT-BR</a> or <a id="blog-en" href="{{ site.baseurl }}en/blog" data-link="Blog EN">EN</a>).</p>
+<p>If you wanna talk about the web, a new cool project or invite me to play soccer, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. I also try to write about some web stuff in my blog | <a id="blog-pt" href="{{ site.baseurl }}blog" data-link="Blog PT-BR">pt-br</a> or <a id="blog-en" href="{{ site.baseurl }}en/blog" data-link="Blog EN">en</a>.</p>
 
 <ul class="social">
     <li>
