--- a/projects/index.html
+++ b/projects/index.html
@@ -4,6 +4,7 @@ title: Projects | Raphael Fabeni
 description: "Some projects that I've developed recently!"
 type: Projects
 language: en
+editDate: 2016-04-20
 ---
 <h1 class="title">Projects</h1>
 <section class="projects">
