--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@ title: Raphael Fabeni
 class: main-index
 type: Home
 language: en
+editDate: 2016-04-20
 ---
 
 <p>Hi! My name is Raphael Fabeni and I'm a brazilian front-end developer passionated for the web, sports, electronic music and travels.</p>
 
-<p>Currently, I'm working full time at <a id="netshoes" href="http://www.netshoes.com.br" target="_blank" data-link="Netshoes">Netshoes</a> and I think that more than write some code or draw in Photoshop, the possibility to plan solutions for help the people is the coolest thing. I'm one of the creators of <a id="meetup" href="http://www.meetup.com/CSS-SP/" target="_blank" data-link="Meetup CSS">CSS Meetup</a> of São Paulo and I don't know why, I started to give some <a id="talks" href="https://speakerdeck.com/raphaelfabeni" target="_blank" data-link="Talks">talks</a>.</p>
+<p>Currently, I'm working full time at <a id="redventures" href="http://www.redventures.com" target="_blank" data-link="RedVentures">RedVentures</a> and I think that more than write some code or draw in Photoshop, the possibility to plan solutions for help the people is the coolest thing. I'm one of the creators of <a id="meetup" href="http://www.meetup.com/CSS-SP/" target="_blank" data-link="Meetup CSS">CSS Meetup</a> of São Paulo and I don't know why, I started to give some <a id="talks" href="https://speakerdeck.com/raphaelfabeni" target="_blank" data-link="Talks">talks</a>.</p>
 
 <p>HTML5, CSS3, JavaScript, UX, wireframes, soccer, cold tea and a lot of water are part of my day. In my free time, I like to read (technical and biography books), play some soccer and go out to dinner.</p>
 
