--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@ language: en
 editDate: 2016-04-20
 ---
 
-<p>Hi! My name is Raphael Fabeni and I'm a brazilian front-end developer passionated for the web, sports, electronic music and travels.</p>
+<p>Hi! My name is Raphael Fabeni and I'm a brazilian developer passionated for web, sports, electronic music and travels.</p>
 
-<p>Currently, I'm working full time at <a id="redventures" href="http://www.redventures.com" target="_blank" data-link="RedVentures">RedVentures</a> and I think that more than write some code or draw in Photoshop, the possibility to plan solutions for help the people is the coolest thing. I'm one of the creators of <a id="meetup" href="http://www.meetup.com/CSS-SP/" target="_blank" data-link="Meetup CSS">CSS Meetup</a> of São Paulo and I don't know why, I started to give some <a id="talks" href="https://speakerdeck.com/raphaelfabeni" target="_blank" data-link="Talks">talks</a>.</p>
-
-<p>HTML5, CSS3, JavaScript, UX, wireframes, soccer, cold tea and a lot of water are part of my day. In my free time, I like to read (technical and biography books), play some soccer and go out to dinner.</p>
+<p>Currently, I'm working full time at <a id="redventures" href="http://www.redventures.com" target="_blank" data-link="RedVentures">RedVentures</a>. I think that more than write some code or draw in Photoshop, the possibility to plan solutions to help people is what makes our job so cool.</p>
 
 <p>If you wanna talk about the web, a new cool project or invite me to play soccer, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. I also try to write about some web stuff in my blog | <a id="blog-pt" href="{{ site.baseurl }}blog" data-link="Blog PT-BR">pt-br</a> or <a id="blog-en" href="{{ site.baseurl }}en/blog" data-link="Blog EN">en</a>.</p>
 
