--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ editDate: 2016-04-20
 
 <p>Currently, I'm working full time at <a id="redventures" href="http://www.redventures.com" target="_blank" data-link="RedVentures">RedVentures</a>. I think that more than write some code or draw in Photoshop, the possibility to plan solutions to help people is what makes our job so cool.</p>
 
-<p>If you wanna talk about the web, a new cool project or invite me to play soccer, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. I also try to write about some web stuff in my <a id="blog-en" href="{{ site.baseurl }}en/blog" data-link="Blog EN">blog</a>.</p>
+<p>If you wanna talk about the web, a new cool project or invite me to play soccer, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. I also try to write about some web stuff in my <a id="blog-en" href="/en/blog" data-link="Blog EN">blog</a>.</p>
 
 <ul class="social">
     <li>
