--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 ---
 layout: default
 title: Raphael Fabeni
-class: main-index
 type: Home
-language: en
-editDate: 2016-04-20
 ---
 
 <p>Hi! My name is Raphael Fabeni and I'm a brazilian developer passionated for web, sports, electronic music and travels.</p>
@@ -14,34 +11,22 @@ editDate: 2016-04-20
 <p>If you wanna talk about the web, a new cool project or invite me to play soccer, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. I also try to write about some web stuff in my <a id="blog-en" href="/en/blog" data-link="Blog EN">blog</a>.</p>
 
 <ul class="social">
-    <li>
-        <a id="twitter" class="twitter" target="_blank" href="http://www.twitter.com/raphaelfabeni" data-link="Twitter">
-            <i class="fa fa-twitter"></i>
-        </a>
-    </li>
-    <li>
-        <a id="facebook" class="facebook" target="_blank" href="http://www.facebook.com/raphaelfabeni" data-link="Facebook">
-            <i class="fa fa-facebook"></i>
-        </a>
-    </li>
-    <li>
-        <a id="github" class="github" target="_blank" href="http://www.github.com/raphaelfabeni" data-link="GitHub">
-            <i class="fa fa-github"></i>
-        </a>
-    </li>
-    <li>
-        <a id="google" class="google" target="_blank" href="https://plus.google.com/u/0/+RaphaelFabeni" data-link="Google">
-            <i class="fa fa-google-plus"></i>
-        </a>
-    </li>
-    <li>
-        <a id="linkedin" class="linkedin" target="_blank" href="http://br.linkedin.com/in/raphaelfabeni" data-link="LinkedIn">
-            <i class="fa fa-linkedin"></i>
-        </a>
-    </li>
-    <li>
-        <a id="codepen" class="codepen" target="_blank" href="http://codepen.io/raphaelfabeni/" data-link="CodePen">
-            <i class="fa fa-codepen"></i>
-        </a>
-    </li>
+  <li>
+    <a id="twitter" class="twitter" target="_blank" href="http://www.twitter.com/raphaelfabeni" data-link="Twitter"></a>
+  </li>
+  <li>
+    <a id="facebook" class="facebook" target="_blank" href="http://www.facebook.com/raphaelfabeni" data-link="Facebook"></a>
+  </li>
+  <li>
+    <a id="github" class="github" target="_blank" href="http://www.github.com/raphaelfabeni" data-link="GitHub"></a>
+  </li>
+  <li>
+    <a id="google" class="google" target="_blank" href="https://plus.google.com/u/0/+RaphaelFabeni" data-link="Google"></a>
+  </li>
+  <li>
+    <a id="linkedin" class="linkedin" target="_blank" href="http://br.linkedin.com/in/raphaelfabeni" data-link="LinkedIn"></a>
+  </li>
+  <li>
+    <a id="codepen" class="codepen" target="_blank" href="http://codepen.io/raphaelfabeni/" data-link="CodePen"></a>
+  </li>
 </ul>
