Starts the homepage

--- a/index.html
+++ b/index.html
@@ -8,25 +8,4 @@ type: Home
 
 <p>Currently, I'm working full time at <a id="redventures" href="http://www.redventures.com" target="_blank" data-link="RedVentures">RedVentures</a>. I think that more than write some code or draw in Photoshop, the possibility to plan solutions to help people is what makes our job so cool.</p>
 
-<p>If you wanna talk about the web, a new cool project or invite me to play soccer, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. I also try to write about some web stuff in my <a id="blog-en" href="/en/blog" data-link="Blog EN">blog</a>.</p>
-
-<ul class="social">
-  <li>
-    <a id="twitter" class="twitter" target="_blank" href="http://www.twitter.com/raphaelfabeni" data-link="Twitter"></a>
-  </li>
-  <li>
-    <a id="facebook" class="facebook" target="_blank" href="http://www.facebook.com/raphaelfabeni" data-link="Facebook"></a>
-  </li>
-  <li>
-    <a id="github" class="github" target="_blank" href="http://www.github.com/raphaelfabeni" data-link="GitHub"></a>
-  </li>
-  <li>
-    <a id="google" class="google" target="_blank" href="https://plus.google.com/u/0/+RaphaelFabeni" data-link="Google"></a>
-  </li>
-  <li>
-    <a id="linkedin" class="linkedin" target="_blank" href="http://br.linkedin.com/in/raphaelfabeni" data-link="LinkedIn"></a>
-  </li>
-  <li>
-    <a id="codepen" class="codepen" target="_blank" href="http://codepen.io/raphaelfabeni/" data-link="CodePen"></a>
-  </li>
-</ul>
+<p>If you wanna talk about the web, a new cool project or invite me to play soccer, send me an <a href="mailto:rapha.fabeni@gmail.com">e-mail</a>. I also try to write about some web stuff in my <a id="blog-en" href="/en/blog" data-link="Blog EN">blog</a>. <br> You can find me at: <a target="_blank" href="http://www.twitter.com/raphaelfabeni" data-link="Twitter">Twitter</a>, <a target="_blank" href="http://www.github.com/raphaelfabeni" data-link="GitHub">GitHub</a>, <a target="_blank" href="http://br.linkedin.com/in/raphaelfabeni" data-link="LinkedIn">LinkedIn</a>, <a target="_blank" href="http://codepen.io/raphaelfabeni/" data-link="CodePen">CodePen</a> and <a target="_blank" href="http://www.facebook.com/raphaelfabeni" data-link="Facebook">Facebook</a>.</p>
