--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ links:
       link: '/blog'
 ---
 
-<p>Hi! My name is Raphael Fabeni and I'm a brazilian developer passionated for web, sports, electronic music and travels.</p>
+<p>Hi! My name is Raphael Fabeni and I'm a Brazilian developer passionated for web, sports, electronic music and travels.</p>
 
 <p>Currently, I'm working full time at <a id="redventures" href="http://www.redventures.com" target="_blank" data-link="RedVentures">RedVentures</a>. More than wrinting code, planning solutions to help people is what makes our job so cool.</p>
 
