Simple class change

--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -9,7 +9,7 @@ links:
     link: '/books'
 ---
 <a href="https://twitter.com/raphaelfabeni?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @raphaelfabeni</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<div class="tweets">
+<div class="hold-tweets">
 	<div class="tweet" data-tweet data-id="1080618176004743168"></div>
 	<div class="tweet" data-tweet data-id="1081957819220459524"></div>
 	<div class="tweet" data-tweet data-id="1073889052905082880"></div>
