--- a/my-closet/index.html
+++ b/my-closet/index.html
@@ -29,6 +29,9 @@ links:
 	</div>
 </div>
 <!-- -->
+
+{% include arrow-links.html %}
+
 <script src="https://www.goodreads.com/review/grid_widget/24678236.Raphael's%20bookshelf:%20read?cover_size=medium&hide_link=true&
 hide_title=true&num_books=50&order=d&shelf=read&sort=date_added&widget_id=1545776489" type="text/javascript" charset="utf-8"></script>
 
