--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -5,8 +5,8 @@ description: 'Some stuff I wrote on Twitter.'
 language: en
 links:
   left:
-    text: Books
-    link: '/books'
+    text: Closet
+    link: '/my-closet'
 ---
 <a href="https://twitter.com/raphaelfabeni?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @raphaelfabeni</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <div class="hold-tweets">
@@ -19,6 +19,9 @@ links:
 	<div class="tweet" data-tweet data-id="1062280907917324288"></div>
 	<div class="tweet" data-tweet data-id="1052602667707625472"></div>
 </div>
+
+{% include arrow-links.html %}
+
 <script src="http://platform.twitter.com/widgets.js"></script>
 <script>
 (function(){
