adds more tweets

--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -10,6 +10,7 @@ links:
 ---
 <a href="https://twitter.com/raphaelfabeni?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @raphaelfabeni</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <div class="hold-tweets">
+	<div class="tweet" data-tweet data-id="1207101490604720128"></div>
 	<div class="tweet" data-tweet data-id="1207275570519785474"></div>
 	<div class="tweet" data-tweet data-id="1125578118155128832"></div>
 	<div class="tweet" data-tweet data-id="1080618176004743168"></div>
