fix script call

--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -19,7 +19,7 @@ lang: en
 	<div class="tweet" data-tweet data-id="1052602667707625472"></div>
 </div>
 
-<script src="http://platform.twitter.com/widgets.js"></script>
+<script src="https://platform.twitter.com/widgets.js"></script>
 <script>
 (function(){
 	const tweets = [].slice.call(document.querySelectorAll('[data-tweet]'));
