Simple adjustments for sub sections

--- a/my-closet/index.html
+++ b/my-closet/index.html
@@ -13,16 +13,16 @@ lang: en
 <!-- -->
 <div class="closet-group">
 	<h2 class="closet-subtitle">Music is the fuel...</h2>
-	<div class="closet-music">
-		<iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:raphaelfabeni&size=detail&theme=light" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>	
-	</div>
+	<!-- <div class="closet-music">
+		<iframe src="https://open.spotify.com/embed/playlist/1ZO6hy44pcsVyvH27NyxeL" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+	</div> -->
 	<div class="closet-music closet-music--playlist">
-		<iframe src="https://open.spotify.com/embed/user/raphaelfabeni/playlist/6tXAzWyvVkVcXdJX1oo18c" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-		<iframe src="https://open.spotify.com/embed/user/spotify/playlist/37i9dQZF1DWSWk35qJLFWn" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+		<iframe src="https://open.spotify.com/embed/playlist/778XfCOBvOv3dsDO1AYmF6" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+		<iframe src="https://open.spotify.com/embed/playlist/1ZO6hy44pcsVyvH27NyxeL" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 	</div>
 </div>
 <!-- -->
 
-<script src="https://www.goodreads.com/review/grid_widget/24678236.Raphael's%20bookshelf:%20read?cover_size=medium&hide_link=true&
+<script src="https://www.goodreads.com/review/grid_widget/24678236?cover_size=medium&hide_link=true&
 hide_title=true&num_books=50&order=d&shelf=read&sort=date_added&widget_id=1545776489" type="text/javascript" charset="utf-8"></script>
 
