--- a/admin/index.html
+++ b/admin/index.html
@@ -10,5 +10,29 @@
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script>
+      var PostPreview = createClass({
+        render: function() {
+          var entry = this.props.entry;
+          var image = entry.getIn(['data', 'image']);
+          var bg = this.props.getAsset(image);
+          return h('div', {
+            className: "post-content"
+          },
+            h('img', {
+              src: bg.toString(),
+              className: "preview-cover"
+            }),
+            h('h1', {
+              "className": "post-title"
+            }, entry.getIn(['data', 'title'])),
+            h('div', {"className": "text"}, this.props.widgetFor('body'))
+          );
+        }
+      });
+          
+      CMS.registerPreviewTemplate("blog", PostPreview);
+      CMS.registerPreviewStyle("./example.css");
+    </script>
   </body>
 </html>
