--- a/admin/index.html
+++ b/admin/index.html
@@ -11,6 +11,62 @@
     <!-- Include the script that builds the page and powers Netlify CMS -->
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script>
+      CMS.registerEditorComponent({
+        // Internal id of the component
+        id: "strava",
+        // Visible label
+        label: "Strava",
+        // Fields the user need to fill out when adding an instance of the component
+        fields: [{name: 'id', label: 'Strava ID', widget: 'string'}],
+        // Pattern to identify a block as being an instance of this component
+        pattern: /^strava (\S+)$/,
+        // Function to extract data elements from the regexp match
+        fromBlock: function(match) {
+          return {
+            id: match[1]
+          };
+        },
+        // Function to create a text block from an instance of this component
+        toBlock: function(obj) {
+          return 'strava ' + obj.id;
+        },
+        // Preview output for this component. Can either be a string or a React component
+        // (component gives better render performance)
+        toPreview: function(obj) {
+          return (
+            '<figure class="text-center"><iframe class="strava" height="405" width="800" frameborder="0" allowtransparency="true" scrolling="no" src="https://www.strava.com/activities/' + obj.id + '"></iframe></figure>'
+          );
+        }
+      });
+      //
+      CMS.registerEditorComponent({
+        // Internal id of the component
+        id: "instagram",
+        // Visible label
+        label: "Instagram",
+        // Fields the user need to fill out when adding an instance of the component
+        fields: [{name: 'id', label: 'Instagram ID', widget: 'string'}],
+        // Pattern to identify a block as being an instance of this component
+        pattern: /^instagram (\S+)$/,
+        // Function to extract data elements from the regexp match
+        fromBlock: function(match) {
+          return {
+            id: match[1]
+          };
+        },
+        // Function to create a text block from an instance of this component
+        toBlock: function(obj) {
+          return 'instagram ' + obj.id;
+        },
+        // Preview output for this component. Can either be a string or a React component
+        // (component gives better render performance)
+        toPreview: function(obj) {
+          return (
+            '<style>.embed-container {position: relative; padding-bottom: 120%; height: 0; overflow: hidden;} .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><figure class="text-center"><div class="embed-container"><iframe src="https://www.instagram.com/p/' +  obj.id + '/embed/" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div></figure>'
+          );
+        }
+      });
+      //
       var PostPreview = createClass({
         render: function() {
           var entry = this.props.entry;
@@ -30,7 +86,7 @@
           );
         }
       });
-          
+       
       CMS.registerPreviewTemplate("blog", PostPreview);
       CMS.registerPreviewStyle("./example.css");
     </script>
