--- a/admin/index.html
+++ b/admin/index.html
@@ -59,7 +59,7 @@
         },
         // Function to create a text block from an instance of this component
         toBlock: function(obj) {
-          return '{% include strava.html stravaId=' + obj.id + ' %}';
+          return '{% include strava.html stravaId="' + obj.id + '"" %}';
         },
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
@@ -87,7 +87,7 @@
         },
         // Function to create a text block from an instance of this component
         toBlock: function(obj) {
-          return '{% include instagram.html instagramId=' + obj.id + ' %}';
+          return '{% include instagram.html instagramId="' + obj.id + '" %}';
         },
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
