--- a/venda/index.html
+++ b/venda/index.html
@@ -19,6 +19,31 @@ imageExternal: true
     }
   }
 
+  .venda--sold .thumb {
+    position: relative;
+  }
+
+  .venda--sold .thumb:after {
+    content: 'Vendido!';
+    background-color: #4183d7;
+    color: #fff;
+    font-size: 32px;
+    left: 0;
+    top: 50%;
+    max-width: 500px;
+    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    font-weight: bold;
+  }
+
+  .venda--sold figure {
+    opacity: .35;
+  }
+
   .venda figure {
     max-width: 600px;
     margin: 10px;
@@ -43,7 +68,7 @@ imageExternal: true
 
 Mais infos, por whatsapp! <a href="https://api.whatsapp.com/send?phone=55991741629&text=Ol%C3%A1!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20os%20produtos%20que%20est%C3%A3o%20%C3%A0%20venda!">Patricia</a> ou <a href="https://api.whatsapp.com/send?phone=5511991979195&text=Ol%C3%A1!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20os%20produtos%20que%20est%C3%A3o%20%C3%A0%20venda!">Fabiana</a>
 {% for item in site.data.venda.items %}
-	<section class="venda">
+	<section class="venda {% if item.sold %}venda--sold{% endif %}">
     <div class="thumb">
       {% for itemImg in item.src %}
       <figure>
@@ -51,8 +76,11 @@ Mais infos, por whatsapp! <a href="https://api.whatsapp.com/send?phone=559917416
       </figure>
       {% endfor %}
     </div>
+    {% if item.sold %}
+    {% else %}
     <div>
       <a href="https://api.whatsapp.com/send?phone=55991741629&text=Ol%C3%A1!%20Tenho%20interesse%20no%20{{ item.title }}">Eu quero!</a>
     </div>
+    {% endif %}
   </section>
 {% endfor %}
