--- a/venda/index.html
+++ b/venda/index.html
@@ -32,8 +32,7 @@ imageExternal: true
     top: 50%;
     max-width: 500px;
     width: 100%;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 0;
     padding: 20px;
     text-align: center;
     position: absolute;
