--- a/admin/index.html
+++ b/admin/index.html
@@ -23,7 +23,7 @@
           {name: 'caption', label: 'Caption image', widget: 'string'}
         ],
         // Pattern to identify a block as being an instance of this component
-        pattern: /^full-image url="(.*)" alt="(.*)" caption="(.*)"/,
+        pattern: /^{% include full-image.html src="(.*)" alt="(.*)" caption="(.*)"  %}/,
         // Function to extract data elements from the regexp match
         fromBlock: function(match) {
           return {
@@ -34,7 +34,7 @@
         },
         // Function to create a text block from an instance of this component
         toBlock: function(obj) {
-          return `full-image url="${obj.id}" alt="${obj.alt}" caption="${obj.caption}"`;
+          return `{% include full-image.html src="${obj.id}" alt="${obj.alt}" caption="${obj.caption}"  %}`;
         },
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
@@ -59,7 +59,7 @@
         // Fields the user need to fill out when adding an instance of the component
         fields: [{name: 'id', label: 'text', widget: 'text'}],
         // Pattern to identify a block as being an instance of this component
-        pattern: /^box (.*)$/,
+        pattern: /^{% include box.html boxContent="(.*)" %}$/,
         // Function to extract data elements from the regexp match
         fromBlock: function(match) {
           return {
@@ -68,7 +68,7 @@
         },
         // Function to create a text block from an instance of this component
         toBlock: function(obj) {
-          return 'box ' + obj.id;
+          return `{% include box.html boxContent="${obj.id}" %}`
         },
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
