--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 layout: default
 title: Raphael Fabeni
 type: Home
-center: true
-links:
-  right:
-    text: Blog
-    link: "/blog"
 ---
+<section class="cover-hold">
+  <div class="cover cover--solid">
+    <div class="cover__intro">
+      <p>Hello!</p>
+    </div>
+  </div>
+  <div class="cover cover--image">
+    <div class="cover__intro">
+      <p>Hello!</p>
+    </div>
+  </div>
+</section>
+<!-- <div class="cover">
+  <p>Hi! My name is Raphael Fabeni and I'm a Brazilian developer passionated for web, sports, electronic music and travels.</p>
 
-<p>Hi! My name is Raphael Fabeni and I'm a Brazilian developer passionated for web, sports, electronic music and travels.</p>
+  <p>Currently, I'm working full time at <a href="http://www.redventures.com" target="_blank" data-link="RedVentures">Red Ventures</a> and living in Charlotte, North Carolina.</p>
 
-<p>Currently, I'm working full time at <a href="http://www.redventures.com" target="_blank" data-link="RedVentures">Red Ventures</a> and living in Charlotte, North Carolina.</p>
+  You can find me at: <a href="https://www.youtube.com/raphaelfabeni" target="blank" class="button button--youtube">YouTube</a>, <a target="_blank" href="http://www.twitter.com/raphaelfabeni" class="button button--twitter">Twitter</a>, <a target="_blank" href="http://www.github.com/raphaelfabeni" class="button button--github">GitHub</a>, <a target="_blank" href="http://br.linkedin.com/in/raphaelfabeni" class="button button--linkedin">LinkedIn</a>, <a target="_blank" href="http://codepen.io/raphaelfabeni/" class="button button--codepen">CodePen</a> and <a target="_blank" href="http://www.instagram.com/raphaelfabeni" class="button button--instagram">Instagram</a>.</p>
 
-You can find me at: <a href="https://www.youtube.com/raphaelfabeni" target="blank" class="button button--youtube">YouTube</a>, <a target="_blank" href="http://www.twitter.com/raphaelfabeni" class="button button--twitter">Twitter</a>, <a target="_blank" href="http://www.github.com/raphaelfabeni" class="button button--github">GitHub</a>, <a target="_blank" href="http://br.linkedin.com/in/raphaelfabeni" class="button button--linkedin">LinkedIn</a>, <a target="_blank" href="http://codepen.io/raphaelfabeni/" class="button button--codepen">CodePen</a> and <a target="_blank" href="http://www.instagram.com/raphaelfabeni" class="button button--instagram">Instagram</a>.</p>
+  <p>I am a dedicated advocate of promoting a healthy lifestyle and sports. Triathlon is not just a hobby for me, but a passion that I wholeheartedly pursue. As an amateur athlete, I am proud to be sponsored by <a href="https://thefeed.cc/raphaelfabeni" target="_blank">The Feed</a>, aligning with their values and support.</p>
 
-<p>I am a dedicated advocate of promoting a healthy lifestyle and sports. Triathlon is not just a hobby for me, but a passion that I wholeheartedly pursue. As an amateur athlete, I am proud to be sponsored by <a href="https://thefeed.cc/raphaelfabeni" target="_blank">The Feed</a>, aligning with their values and support.</p>
+</div> -->
