--- a/links/index.html
+++ b/links/index.html
@@ -2,8 +2,7 @@
 layout: simple
 title: Links | Raphael Fabeni
 description: View raphaelfabeni's links
-noHeader: true
-bodyClass: "links"
+type: links
 ---
 <div class="links">
   <figure class="links__thumb">
