--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ type: Home
 <div class="info">
   <div class="info__section">
     <h1 class="info__text">Hi! I'm Raphael Fabeni.</h1>
-    <p class="info__text">I'm an <strong>Engineering Manager</strong> currently working at <a href="http://www.redventures.com" target="_blank">Red Ventures</a>. I started my career in <strong>Brazil</strong> but now I'm living in the <strong>US</strong>.</p>
+    <p class="info__text">I'm an <strong>amateur triathlete</strong> and <strong>Engineering Manager</strong> currently working at <a href="http://www.redventures.com" target="_blank">Red Ventures</a>. and living in the US.</p>
   </div>
   <div class="info__section info__section--profile" aria-hidden>
     <img src="assets/images/raphael-fabeni-rv.jpg" alt="">
