--- a/links/index.html
+++ b/links/index.html
@@ -15,6 +15,10 @@ noHeader: true
       <a class="links-container__the-feed" href="https://thefeed.cc/raphaelfabeni">The Feed</a>
     </li>
     <li>
+      <li>
+        <a class="links-container__smart" href="https://caffeinearmy.com/RAPHAELFABENI">Smart Energy Coffee </a>
+      </li>
+      <li>
       <a class="links-container__youtube" href="https://www.youtube.com/c/RaphaelFabeni">YouTube</a>
     </li>
     <li>
