--- a/links/index.html
+++ b/links/index.html
@@ -12,12 +12,12 @@ noHeader: true
   <h1 class="links-container__title">@raphaelfabeni</h1>
   <ul class="links-container__list">
     <li>
+      <a class="links-container__smart" href="https://caffeinearmy.com/RAPHAELFABENI">Caffeine Army - 10% OFF</a>
+    </li>
+    <li>
       <a class="links-container__the-feed" href="https://thefeed.cc/raphaelfabeni">The Feed</a>
     </li>
     <li>
-      <li>
-        <a class="links-container__smart" href="https://caffeinearmy.com/RAPHAELFABENI">Smart Energy Coffee </a>
-      </li>
       <li>
       <a class="links-container__youtube" href="https://www.youtube.com/c/RaphaelFabeni">YouTube</a>
     </li>
