--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ type: Home
 <div class="info">
   <div class="info__section">
     <h1 class="info__text">Hi! I'm Raphael Fabeni.</h1>
-    <p class="info__text">I'm an <strong>amateur triathlete</strong> and <strong>Director of Engineering</strong> currently working at <a href="http://www.redventures.com" target="_blank">Red Ventures</a>. and living in the US.</p>
+    <p class="info__text">A Brazilian <strong>amateur triathlete</strong> and <strong>Director of Engineering</strong> at <a href="http://www.redventures.com" target="_blank">Red Ventures</a>, currently based in the US. I'm passionate about combining my enthusiasm for endurance sports with my professional journey in technology leadership.</p>
   </div>
   <div class="info__section info__section--profile" aria-hidden>
     <img src="assets/images/raphael-fabeni-rv.jpg" alt="">
